--- a/testem.yml
+++ b/testem.yml
@@ -2,13 +2,13 @@ framework: mocha
 serve_files:
   - build/build.js
   - test/utils/*.js
-  - test/**/*.js
+  - build/test/*.js
 src_files:
   - test/**/*.coffee
   - lib/**/*.js
   - index.js
-before_tests: component build --dev && coffee -c test
-on_exit: rm -rf ./build && rm test/*.js
+before_tests: component build --dev && coffee -o build/test -c test
+on_exit: rm -rf build
 launch_in_ci:
   - phantomjs
 launch_in_dev:
