--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
   "name": "oauth2-implicit",
-  "version": "0.3.1",
-  "description": "A minimal oauth2-spec-based client utility for traveling through the OAuth2 Implicit Grant flow",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
+  "private": true,
   "scripts": {
     "test": "testem ci"
   },
@@ -14,8 +9,5 @@
     "url": "https://github.com/jasonkuhrt/oauth2-implicit.git"
   },
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jasonkuhrt/oauth2-implicit/issues"
-  },
   "homepage": "https://github.com/jasonkuhrt/oauth2-implicit"
 }
