--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "url": "https://github.com/jasonkuhrt/oauth2-implicit.git"
   },
   "license": "MIT",
-  "homepage": "https://github.com/jasonkuhrt/oauth2-implicit"
+  "homepage": "https://github.com/jasonkuhrt/oauth2-implicit",
+  "devDependencies": {
+    "testem": "^0.6.22"
+  }
 }
