--- a/testem.yml
+++ b/testem.yml
@@ -6,7 +6,7 @@ src_files:
   - test/**/*.coffee
   - lib/**/*.js
   - index.js
-before_tests: component build --dev && coffee -o build/test -c test
+before_tests: node_modules/.bin/component build --dev && node_modules/.bin/coffee -o build/test -c test
 on_exit: rm -rf build
 launch_in_ci:
   - phantomjs
