--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "oauth2-implicit",
+  "license": "MIT",
   "private": true,
-  "version": "0.3.1",
   "scripts": {
     "test": "testem ci"
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/jasonkuhrt/oauth2-implicit.git"
+    "url": "https://github.com/jasonkuhrt/oauth2-implicit.git",
+    "type": "git"
   },
-  "license": "MIT",
+  "name": "oauth2-implicit",
   "homepage": "https://github.com/jasonkuhrt/oauth2-implicit",
+  "version": "0.4.0",
   "devDependencies": {
     "coffee-script": "^1.8.0",
-    "component": "^1.0.0",
-    "testem": "^0.6.22"
+    "testem": "^0.6.22",
+    "component": "^1.0.0"
   }
 }
