--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
   "license": "MIT",
-  "scripts": {
+  "scripts": {},
+  "dependencies": {
+    "qs": "^2.3.3"
   },
   "repository": {
     "url": "https://github.com/jasonkuhrt/oauth2-implicit.git",
     "type": "git"
   },
+  "author": "Jason Kuhrt <jasonkuhrt@me.com> (http://jasonkuhrt.com/)",
   "name": "oauth2-implicit",
-  "homepage": "https://github.com/jasonkuhrt/oauth2-implicit",
-  "version": "0.5.0",
-  "devDependencies": {
-    "coffee-script": "^1.8.0"
-  },
-  "description": "A minimal oauth2-spec-based client utility for traveling through the OAuth2 Implicit Grant flow",
-  "bugs": {
-    "url": "https://github.com/jasonkuhrt/oauth2-implicit/issues"
-  },
-  "main": "index.js",
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "qs": "^2.3.3"
+  "homepage": "https://github.com/jasonkuhrt/oauth2-implicit",
+  "version": "0.6.0",
+  "main": "index.js",
+  "description": "A minimal oauth2-spec-based client utility for traveling through the OAuth2 Implicit Grant flow",
+  "devDependencies": {
+    "coffee-script": "^1.8.0"
   },
-  "author": "Jason Kuhrt <jasonkuhrt@me.com> (http://jasonkuhrt.com/)"
+  "bugs": {
+    "url": "https://github.com/jasonkuhrt/oauth2-implicit/issues"
+  }
 }
