--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "homepage": "https://github.com/jasonkuhrt/oauth2-implicit",
   "version": "0.6.0",
-  "main": "index.js",
+  "main": "lib/index.js",
   "description": "A minimal oauth2-spec-based client utility for traveling through the OAuth2 Implicit Grant flow",
   "devDependencies": {
     "coffee-script": "^1.8.0"
