--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "main": "lib/index.js",
   "description": "A minimal oauth2-spec-based client utility for traveling through the OAuth2 Implicit Grant flow",
   "devDependencies": {
-    "coffee-script": "^1.8.0"
+    "coffee-script": "^1.8.0",
+    "eslint-config-littlebits": "^0.2.1"
   },
   "bugs": {
     "url": "https://github.com/jasonkuhrt/oauth2-implicit/issues"
