--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "test": "karma start --single-run --browsers Chrome,PhantomJS"
+  },
   "dependencies": {
     "qs": "^2.3.3"
   },
@@ -18,8 +20,22 @@
   "main": "lib/index.js",
   "description": "A minimal oauth2-spec-based client utility for traveling through the OAuth2 Implicit Grant flow",
   "devDependencies": {
+    "chai": "^3.3.0",
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
+    "coffee-loader": "^0.7.2",
     "coffee-script": "^1.8.0",
-    "eslint-config-littlebits": "^0.2.1"
+    "eslint-config-littlebits": "^0.2.1",
+    "karma": "^0.13.10",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-coffee-preprocessor": "^0.3.0",
+    "karma-mocha": "^0.2.0",
+    "karma-mocha-reporter": "^1.1.1",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-safari-launcher": "^0.1.1",
+    "karma-webpack": "^1.7.0",
+    "phantomjs": "^1.9.18",
+    "webpack": "^1.12.2"
   },
   "bugs": {
     "url": "https://github.com/jasonkuhrt/oauth2-implicit/issues"
