--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "license": "MIT",
   "scripts": {
+    "build": "rm -rf build && babel --out-dir build lib",
     "test": "karma start karma.conf-ci.js --single-run",
-    "dev": "karma start --browsers PhantomJS --log-level error"
+    "dev": "karma start --browsers PhantomJS,Chrome,Safari --log-level error",
+    "postversion": "git push && git push --tags && npm publish",
+    "prepublish": "npm run build"
   },
   "dependencies": {
+    "object.assign": "^4.0.1",
     "qs": "^2.3.3"
   },
   "repository": {
@@ -18,9 +22,10 @@
   },
   "homepage": "https://github.com/jasonkuhrt/oauth2-implicit",
   "version": "0.6.2",
-  "main": "lib/index.js",
+  "main": "build/index.js",
   "description": "A minimal oauth2-spec-based client utility for traveling through the OAuth2 Implicit Grant flow",
   "devDependencies": {
+    "babel": "^5.8.23",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "chai": "^3.3.0",
