--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "test"
   },
   "homepage": "https://github.com/jasonkuhrt/oauth2-implicit",
-  "version": "0.7.0-0",
+  "version": "0.7.0",
   "main": "build/index.js",
   "description": "A minimal oauth2-spec-based client utility for traveling through the OAuth2 Implicit Grant flow",
   "devDependencies": {
